// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Default Component should render normal header adequately for desktop 1`] = `
<div class="header container desktop" ng-reflect-ng-class="desktop">
  <ul class="user-links">
    <li><ish-login-status data-testing-id="user-status-desktop"></ish-login-status></li>
    <li class="d-none d-md-block">
      <ish-product-compare-status
        data-testing-id="compare-status-desktop"
      ></ish-product-compare-status>
    </li>
  </ul>
  <div class="header-utility">
    <a class="search-toggler"></a>
    <div class="language-switch-container d-none d-md-block">
      <ish-language-switch data-testing-id="language-switch-desktop"></ish-language-switch>
    </div>
    <ish-mini-basket
      class="d-none d-md-block"
      data-testing-id="mini-basket-desktop"
      view="full"
      ng-reflect-ng-class="d-md-block"
      ng-reflect-view="full"
    ></ish-mini-basket
    ><ish-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      class="d-md-none"
      ng-reflect-ng-class="d-md-none"
      ng-reflect-view="small"
    ></ish-mini-basket>
  </div>
  <div class="row align-items-center">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          class="logo"
          data-testing-id="header-home-link-desktop"
          rel="home"
          routerlink="/home"
        ></a>
      </div>
    </div>
    <div class="col-md-5 text-right"><ish-lazy-header-quickorder></ish-lazy-header-quickorder></div>
    <div class="col-md-4">
      <div class="search-container header-search-container">
        <ish-lazy-search-box data-testing-id="search-box-desktop"></ish-lazy-search-box>
      </div>
    </div>
  </div>
  <button class="navbar-toggler" type="button">
    <span class="sr-only">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu open"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" ng-reflect-collapsed="false">
      <div class="main-navigation" role="navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Header Default Component should render normal header adequately for mobile devices 1`] = `
<div class="header container mobile" ng-reflect-ng-class="mobile">
  <ul class="user-links">
    <li class="d-none d-md-block">
      <ish-product-compare-status
        data-testing-id="compare-status-desktop"
      ></ish-product-compare-status>
    </li>
  </ul>
  <div class="header-utility">
    <a class="search-toggler active-search"
      ><div class="search-container header-search-container show" ng-reflect-collapsed="false">
        <ish-lazy-search-box data-testing-id="search-box-desktop"></ish-lazy-search-box></div
    ></a>
    <div class="language-switch-container d-none d-md-block">
      <ish-language-switch data-testing-id="language-switch-desktop"></ish-language-switch>
    </div>
    <ish-login-status view="small" ng-reflect-view="small"></ish-login-status
    ><ish-mini-basket
      class="d-none d-md-block"
      data-testing-id="mini-basket-desktop"
      view="full"
      ng-reflect-ng-class="d-md-block"
      ng-reflect-view="full"
    ></ish-mini-basket
    ><ish-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      class="d-md-none"
      ng-reflect-ng-class="d-md-none"
      ng-reflect-view="small"
    ></ish-mini-basket>
  </div>
  <div class="row align-items-center">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          class="mobile-logo"
          data-testing-id="header-home-link-mobile"
          rel="home"
          routerlink="/home"
        ></a>
      </div>
    </div>
    <div class="col-md-5 text-right"><ish-lazy-header-quickorder></ish-lazy-header-quickorder></div>
    <div class="col-md-4"></div>
  </div>
  <button class="navbar-toggler" type="button">
    <span class="sr-only">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" ng-reflect-collapsed="true">
      <div class="main-navigation" role="navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Header Default Component should render normal header adequately for tablet devices 1`] = `
<div class="header container tablet" ng-reflect-ng-class="tablet">
  <ul class="user-links">
    <li><ish-login-status data-testing-id="user-status-desktop"></ish-login-status></li>
    <li class="d-none d-md-block">
      <ish-product-compare-status
        data-testing-id="compare-status-desktop"
      ></ish-product-compare-status>
    </li>
  </ul>
  <div class="header-utility">
    <a class="search-toggler"></a>
    <div class="language-switch-container d-none d-md-block">
      <ish-language-switch data-testing-id="language-switch-desktop"></ish-language-switch>
    </div>
    <ish-mini-basket
      class="d-none d-md-block"
      data-testing-id="mini-basket-desktop"
      view="full"
      ng-reflect-ng-class="d-md-block"
      ng-reflect-view="full"
    ></ish-mini-basket
    ><ish-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      class="d-md-none"
      ng-reflect-ng-class="d-md-none"
      ng-reflect-view="small"
    ></ish-mini-basket>
  </div>
  <div class="row align-items-center">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          class="logo"
          data-testing-id="header-home-link-desktop"
          rel="home"
          routerlink="/home"
        ></a>
      </div>
    </div>
    <div class="col-md-5 text-right"><ish-lazy-header-quickorder></ish-lazy-header-quickorder></div>
    <div class="col-md-4">
      <div class="search-container header-search-container">
        <ish-lazy-search-box data-testing-id="search-box-desktop"></ish-lazy-search-box>
      </div>
    </div>
  </div>
  <button class="navbar-toggler" type="button">
    <span class="sr-only">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu open"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" ng-reflect-collapsed="false">
      <div class="main-navigation" role="navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Header Default Component should render sticky header adequately for desktop 1`] = `
<div class="header container desktop" ng-reflect-ng-class="desktop">
  <div class="header-utility">
    <a class="search-toggler active-search"
      ><fa-icon class="header-icon" ng-reflect-icon="fas,search"></fa-icon>
      <div class="search-container header-search-container" ng-reflect-collapsed="false">
        <ish-lazy-search-box data-testing-id="search-box-desktop"></ish-lazy-search-box></div
    ></a>
    <div class="language-switch-container d-none d-md-block"></div>
    <ish-login-status view="small" ng-reflect-view="small"></ish-login-status
    ><ish-mini-basket
      class="d-none d-lg-block"
      data-testing-id="mini-basket-desktop"
      view="full"
      ng-reflect-ng-class="d-lg-block"
      ng-reflect-view="full"
    ></ish-mini-basket
    ><ish-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      class="d-lg-none"
      ng-reflect-ng-class="d-lg-none"
      ng-reflect-view="small"
    ></ish-mini-basket>
  </div>
  <div class="row align-items-center">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          class="logo"
          data-testing-id="header-home-link-desktop"
          rel="home"
          routerlink="/home"
        ></a>
      </div>
    </div>
    <div class="col-md-5 text-right"><ish-lazy-header-quickorder></ish-lazy-header-quickorder></div>
    <div class="col-md-4"></div>
  </div>
  <button class="navbar-toggler" type="button">
    <span class="sr-only">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu open"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" ng-reflect-collapsed="false">
      <div class="main-navigation" role="navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Header Default Component should render sticky header adequately for mobile devices 1`] = `
<div class="header container mobile" ng-reflect-ng-class="mobile">
  <div class="header-utility">
    <a class="search-toggler active-search"
      ><fa-icon class="header-icon" ng-reflect-icon="fas,search"></fa-icon>
      <div class="search-container header-search-container" ng-reflect-collapsed="false">
        <ish-lazy-search-box data-testing-id="search-box-desktop"></ish-lazy-search-box></div
    ></a>
    <div class="language-switch-container d-none d-md-block"></div>
    <ish-login-status view="small" ng-reflect-view="small"></ish-login-status
    ><ish-mini-basket
      class="d-none d-lg-block"
      data-testing-id="mini-basket-desktop"
      view="full"
      ng-reflect-ng-class="d-lg-block"
      ng-reflect-view="full"
    ></ish-mini-basket
    ><ish-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      class="d-lg-none"
      ng-reflect-ng-class="d-lg-none"
      ng-reflect-view="small"
    ></ish-mini-basket>
  </div>
  <div class="row align-items-center">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          class="mobile-logo"
          data-testing-id="header-home-link-mobile"
          rel="home"
          routerlink="/home"
        ></a>
      </div>
    </div>
    <div class="col-md-5 text-right"><ish-lazy-header-quickorder></ish-lazy-header-quickorder></div>
    <div class="col-md-4"></div>
  </div>
  <button class="navbar-toggler" type="button">
    <span class="sr-only">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" ng-reflect-collapsed="true">
      <div class="main-navigation" role="navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Header Default Component should render sticky header adequately for tablet devices 1`] = `
<div class="header container tablet" ng-reflect-ng-class="tablet">
  <div class="header-utility">
    <a class="search-toggler active-search"
      ><fa-icon class="header-icon" ng-reflect-icon="fas,search"></fa-icon>
      <div class="search-container header-search-container" ng-reflect-collapsed="false">
        <ish-lazy-search-box data-testing-id="search-box-desktop"></ish-lazy-search-box></div
    ></a>
    <div class="language-switch-container d-none d-md-block"></div>
    <ish-login-status view="small" ng-reflect-view="small"></ish-login-status
    ><ish-mini-basket
      class="d-none d-lg-block"
      data-testing-id="mini-basket-desktop"
      view="full"
      ng-reflect-ng-class="d-lg-block"
      ng-reflect-view="full"
    ></ish-mini-basket
    ><ish-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      class="d-lg-none"
      ng-reflect-ng-class="d-lg-none"
      ng-reflect-view="small"
    ></ish-mini-basket>
  </div>
  <div class="row align-items-center">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          class="mobile-logo"
          data-testing-id="header-home-link-mobile"
          rel="home"
          routerlink="/home"
        ></a>
      </div>
    </div>
    <div class="col-md-5 text-right"><ish-lazy-header-quickorder></ish-lazy-header-quickorder></div>
    <div class="col-md-4"></div>
  </div>
  <button class="navbar-toggler" type="button">
    <span class="sr-only">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" ng-reflect-collapsed="true">
      <div class="main-navigation" role="navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;
